unpackaged/main/default/objects/FPC_ZipCode__c/FPC_ZipCode__c.object-meta.xml
<CustomObject>
    <description>Zip / City / State Lookup</description>
    <label>Zip Code</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Zip Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>