unpackaged/main/default/objects/FPC_ZipCode__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>FPC_Address__c</referenceTo>
    <relationshipLabel>Zip Codes</relationshipLabel>
    <relationshipName>Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>