unpackaged/main/default/objects/FPC_ZipCode__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City associated with this zip code</description>
    <inlineHelpText>City associated with this zip code</inlineHelpText>
    <label>City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>