unpackaged/main/default/objects/FPC_ZipCode__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>The county this zip code is in.</description>
    <inlineHelpText>The county this zip code is in.</inlineHelpText>
    <label>County</label>
    <length>32</length>
    <type>Text</type>
</CustomField>