unpackaged/main/default/objects/FPC_ZipCode__c/fields/MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>MSA_Name__c</fullName>
    <description>Metropolitan Service Area Name for this Zip Code</description>
    <inlineHelpText>Metropolitan Service Area Name for this Zip Code</inlineHelpText>
    <label>MSA Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>